@@ -1,5 +1,16 @@
 2014-06-24  Wilco  <wdijkstr@arm.com>
 
+	* sysdeps/arm/fpu_control.h (_FPU_MASK_RM): Define.
+	* sysdeps/arm/fenv_private.h (libc_fesetround_vfp)
+	(libc_feholdexcept_setround_vfp) (libc_feholdsetround_vfp)
+	(libc_feresetround_vfp) (libc_feholdsetround_vfp_ctx)
+	(libc_feresetround_vfp_ctx): Use _FPU_MASK_RM.
+	* sysdeps/arm/fesetround.c (fesetround): Use _FPU_MASK_RM.
+	* sysdeps/arm/get-rounding-mode.h (get_rounding_mode):
+	Use _FPU_MASK_RM.
+
+2014-06-24  Wilco  <wdijkstr@arm.com>
+
 	* sysdeps/arm/fsetexcptflg.c (fesetexceptflag): Remove unused include.
 
 2014-06-24  Wilco  <wdijkstr@arm.com>
